tests/outref/TERR015.ref
[ERROR] PATH:LINENUM DATE TIME : Prepared statement dollar syntax (e.g. $1, $2, etc.) only supported in Rocto using the Extended Query Protocol
Error with syntax near (line 1, column 8):

	select $1 from names;
	       ^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select $1 from names;


